# scanpay

./: .gitignore  README.md
admin/: index.html
admin-panel/: index.html  package.json
admin-panel/src/: App.jsx  api.js  theme.js
admin-panel/src/components/: ConfirmDialog.jsx  KPICard.jsx  SolanaLink.jsx
admin-panel/src/layouts/: AdminLayout.jsx
admin-panel/src/pages/: AnalyticsPage.jsx  AuditLogPage.jsx  CompaniesPage.jsx  DashboardPage.jsx  ModerationPage.jsx  ReceiptsPage.jsx  UsersPage.jsx  WalletPage.jsx  WithdrawalsPage.jsx
backend/: package.json
backend/src/: bot.js  claude.js  db.js  notify.js  server.js  solana.js
company-dashboard/: index.html  package.json
company-dashboard/src/: App.jsx  api.js  theme.js
company-dashboard/src/components/analytics/: AnalyticsTab.jsx
company-dashboard/src/components/audience/: AudienceTab.jsx
company-dashboard/src/components/dashboard/: DashboardTab.jsx
company-dashboard/src/components/layout/: Sidebar.jsx
company-dashboard/src/components/overview/: OverviewTab.jsx
company-dashboard/src/components/pricing/: PricingTab.jsx
company-dashboard/src/hooks/: useClock.js  useDashboardData.js  useRealtimeFeed.js
company-dashboard/src/styles/: global.css
docs/: business-processes.docx  generate-docx.js  generate-pptx.js  pitch-deck.pptx
landing/: index.html
scan/: index.html
smart-contract/: Anchor.toml
smart-contract/programs/smart-contract/: Cargo.toml
smart-contract/programs/smart-contract/src/: lib.rs
telegram-app/: index.html  package.json  vite.config.js
telegram-app/src/: App.jsx
(+2 files in other folders)
