[package]
name = "mening-deregim"
version = "0.1.0"
description = "Data marketplace smart contract on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mening_deregim"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
